set(Target Triangle)
project(${Target})

if (CMAKE_BUILD_TYPE EQUAL Debug)
	if (MSVC)
		set(CompileOptions /DEBUG)
	else()
		set(CompileOptions -g)
	endif()
else()
	if (MSVC)
		set(CompileOptions /O2)
	else()
		set(CompileOptions -O3)
	endif()
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Examples/${Target})

add_executable(${Target} main.cpp)
target_link_libraries(${Target} PUBLIC Fluent)
target_compile_options(${Target} PUBLIC ${CompileOptions})